se hace dinamica la vista novelties

--- a/spellBook/src/views/products/novelties.ejs
+++ b/spellBook/src/views/products/novelties.ejs
@@ -15,30 +15,36 @@
     <h4 class="d-inline">SpellBook</h4><p class="d-inline">  te trae las últimas novedades en libros ...</p>
   </div>
   <p class="m-1"> Si estás buscando ultimos lanzamiento de libros estás en el lugar adecuado.</p>
-  <% booksNovelties.forEach((book) => { %>
-      <div class="nov-product">
-        <figure class="nov-book">
-          <img class="books__img book-cover" src="images/libros/<%= book.imagen%>" alt="">       
-        </figure>
-        <div class="nov-description">
-          <p class="nov-text"><%= book.descripcion %> </p>
-          <a class="nov-autor" href=""><%= book.autor %> </a>
-          <span class="nov-price">$ <%= book.precio %> </span>
+  <% booksNovelties.forEach((book, i) => { %>
+    <% if (i % 2 == 0) { %>
+
+          <div class="nov-product">
+            <figure class="nov-book">
+              <img class="books__img book-cover" src="images/libros/<%= book.imagen%>" alt="">       
+            </figure>
+            <div class="nov-description">
+              <p class="nov-text"><%= book.descripcion %> </p>
+              <a class="nov-autor" href=""><%= book.autor %> </a>
+              <span class="nov-price">$ <%= book.precio %> </span>
+            </div>
+          </div>
+
+      <% } else { %>
+        <div class="nov-product">
+          <div class="nov-description">
+            <p class="nov-text"><%= book.descripcion %> </p>
+            <a class="nov-autor" href=""><%= book.autor %> </a>
+            <span class="nov-price">$ <%= book.precio %> </span>
+          </div>
+          <figure class="nov-book">
+            <img class="books__img book-cover" src="images/libros/<%= book.imagen%>" alt="aca va una imagen">       
+          </figure>
         </div>
-      </div>
+    <% } %>
+   
    
   <% }) %>
   
-  <div class="nov-product">
-    <div class="nov-description">
-      <p class="nov-text">Historia de la Saga de Harry Potter y la Primera Que se Representa Oficialmente en los Escenarios. Esta Edición Especial del Texto Teatral Acerca a los Lectores la Continuación del Viaje de Harry Potter, sus Amigos y Familiares, Inmediatamente Después del Estreno Mundial de la Obra en el West End de Londres el 30 de Julio de 2016."</p>
-      <a class="nov-autor" href="">Autor</a>
-      <span class="nov-price">$ PRECIO</span>
-    </div>
-    <figure class="nov-book">
-      <img class="books__img book-cover" src="images/libros/AnimalesFantasticosYDondeEncontrarlos.jpg" alt="">
-    </figure>
-  </div>
 </seccion>
 <seccion class="conteiner-main">
   <div class="nov-title">
@@ -50,26 +56,36 @@
     <p>Somos fanaticos de la lectura y lo fantastico.. </p>
   </div>
   <p class="m-1">Por ello te brindamos esta sección que elegimos nosotros mismos para que disfrutes.</p>
-  <div class="nov-product">
-    <figure class="nov-book">
-      <img class="books__img book-cover" src="images/libros/AnimalesFantasticosYDondeEncontrarlos.jpg" alt="">       
-    </figure>
-    <div class="nov-description">
-      <p class="nov-text">Historia de la Saga de Harry Potter y la Primera Que se Representa Oficialmente en los Escenarios. Esta Edición Especial del Texto Teatral Acerca a los Lectores la Continuación del Viaje de Harry Potter, sus Amigos y Familiares, Inmediatamente Después del Estreno Mundial de la Obra en el West End de Londres el 30 de Julio de 2016."</p>
-      <a class="nov-autor" href="">Autor</a>
-      <span class="nov-price">$ PRECIO</span>
-    </div>
-  </div>
-  <div class="nov-product">
-    <div class="nov-description">
-      <p class="nov-text">Historia de la Saga de Harry Potter y la Primera Que se Representa Oficialmente en los Escenarios. Esta Edición Especial del Texto Teatral Acerca a los Lectores la Continuación del Viaje de Harry Potter, sus Amigos y Familiares, Inmediatamente Después del Estreno Mundial de la Obra en el West End de Londres el 30 de Julio de 2016."</p>
-      <a class="nov-autor" href="">Autor</a>
-      <span class="nov-price">$ PRECIO</span>
-    </div>
-    <figure class="nov-book">
-      <img class="books__img book-cover" src="images/libros/AnimalesFantasticosYDondeEncontrarlos.jpg" alt="">
-    </figure>
-  </div>
+
+  <% booksRecommended.forEach((book, i) => { %>
+    <% if (i % 2 == 0) { %>
+
+          <div class="nov-product">
+            <figure class="nov-book">
+              <img class="books__img book-cover" src="images/libros/<%= book.imagen%>" alt="">       
+            </figure>
+            <div class="nov-description">
+              <p class="nov-text"><%= book.descripcion %> </p>
+              <a class="nov-autor" href=""><%= book.autor %> </a>
+              <span class="nov-price">$ <%= book.precio %> </span>
+            </div>
+          </div>
+
+      <% } else { %>
+        <div class="nov-product">
+          <div class="nov-description">
+            <p class="nov-text"><%= book.descripcion %> </p>
+            <a class="nov-autor" href=""><%= book.autor %> </a>
+            <span class="nov-price">$ <%= book.precio %> </span>
+          </div>
+          <figure class="nov-book">
+            <img class="books__img book-cover" src="images/libros/<%= book.imagen%>" alt="aca va una imagen">       
+          </figure>
+        </div>
+    <% } %>
+   
+   
+  <% }) %>
 </seccion>
 
 <seccion class="conteiner-main">
@@ -89,26 +105,35 @@
   <div class="m-1 text-center">
     <p>TENEMOS BUEN GUSTO!!!!   🤓🤓</p>
   </div>
-  <div class="nov-product">
-    <figure class="nov-book">
-      <img class="books__img book-cover" src="images/libros/AnimalesFantasticosYDondeEncontrarlos.jpg" alt="">       
-    </figure>
-    <div class="nov-description">
-      <p class="nov-text">Historia de la Saga de Harry Potter y la Primera Que se Representa Oficialmente en los Escenarios. Esta Edición Especial del Texto Teatral Acerca a los Lectores la Continuación del Viaje de Harry Potter, sus Amigos y Familiares, Inmediatamente Después del Estreno Mundial de la Obra en el West End de Londres el 30 de Julio de 2016."</p>
-      <a class="nov-autor" href="">Autor</a>
-      <span class="nov-price">$ PRECIO</span>
-    </div>
-  </div>
-  <div class="nov-product">
-    <div class="nov-description">
-      <p class="nov-text">Historia de la Saga de Harry Potter y la Primera Que se Representa Oficialmente en los Escenarios. Esta Edición Especial del Texto Teatral Acerca a los Lectores la Continuación del Viaje de Harry Potter, sus Amigos y Familiares, Inmediatamente Después del Estreno Mundial de la Obra en el West End de Londres el 30 de Julio de 2016."</p>
-      <a class="nov-autor" href="">Autor</a>
-      <span class="nov-price">$ PRECIO</span>
-    </div>
-    <figure class="nov-book">
-      <img class="books__img book-cover" src="images/libros/AnimalesFantasticosYDondeEncontrarlos.jpg" alt="">
-    </figure>
-  </div>
+  <% booksRecommended.forEach((book, i) => { %>
+    <% if (i % 2 == 0) { %>
+
+          <div class="nov-product">
+            <figure class="nov-book">
+              <img class="books__img book-cover" src="images/libros/<%= book.imagen%>" alt="">       
+            </figure>
+            <div class="nov-description">
+              <p class="nov-text"><%= book.descripcion %> </p>
+              <a class="nov-autor" href=""><%= book.autor %> </a>
+              <span class="nov-price">$ <%= book.precio %> </span>
+            </div>
+          </div>
+
+      <% } else { %>
+        <div class="nov-product">
+          <div class="nov-description">
+            <p class="nov-text"><%= book.descripcion %> </p>
+            <a class="nov-autor" href=""><%= book.autor %> </a>
+            <span class="nov-price">$ <%= book.precio %> </span>
+          </div>
+          <figure class="nov-book">
+            <img class="books__img book-cover" src="images/libros/<%= book.imagen%>" alt="aca va una imagen">       
+          </figure>
+        </div>
+    <% } %>
+   
+   
+  <% }) %>
  
 
 </seccion>
