--- a/spellBook/src/views/products/novelties.ejs
+++ b/spellBook/src/views/products/novelties.ejs
@@ -23,7 +23,14 @@
               <img class="books__img book-cover" src="images/libros/<%= book.imagen%>" alt="">       
             </figure>
             <div class="nov-description">
-              <p class="nov-text"><%= book.descripcion %> </p>
+              <p class="nov-text">
+                <% if (book.descripcion.length > 250) { %>
+                  <% let descriptionLow = book.descripcion.slice(0 , 250) %>
+                  <%= descriptionLow %> ... 
+                <% } else { %>
+                  <%= book.descripcion %> </p>
+                <% } %>
+              </p>
               <a class="nov-autor" href=""><%= book.autor %> </a>
               <span class="nov-price">$ <%= book.precio %> </span>
             </div>
@@ -32,7 +39,14 @@
       <% } else { %>
         <div class="nov-product">
           <div class="nov-description">
-            <p class="nov-text"><%= book.descripcion %> </p>
+            <p class="nov-text">
+              <% if (book.descripcion.length > 250) { %>
+               <% let descriptionLow = book.descripcion.slice(0 , 250) %>
+               <%= descriptionLow %> ... 
+              <% } else { %>
+                <%= book.descripcion %> </p>
+              <% } %>
+            </p>
             <a class="nov-autor" href=""><%= book.autor %> </a>
             <span class="nov-price">$ <%= book.precio %> </span>
           </div>
@@ -65,7 +79,14 @@
               <img class="books__img book-cover" src="images/libros/<%= book.imagen%>" alt="">       
             </figure>
             <div class="nov-description">
-              <p class="nov-text"><%= book.descripcion %> </p>
+              <p class="nov-text">
+                 <% if (book.descripcion.length > 250) { %>
+                  <% let descriptionLow = book.descripcion.slice(0 , 250) %>
+                  <%= descriptionLow %> ... 
+                <% } else { %>
+                  <%= book.descripcion %> </p>
+                <% } %>
+               </p>
               <a class="nov-autor" href=""><%= book.autor %> </a>
               <span class="nov-price">$ <%= book.precio %> </span>
             </div>
@@ -74,7 +95,14 @@
       <% } else { %>
         <div class="nov-product">
           <div class="nov-description">
-            <p class="nov-text"><%= book.descripcion %> </p>
+            <p class="nov-text">
+               <% if (book.descripcion.length > 250) { %>
+                  <% let descriptionLow = book.descripcion.slice(0 , 250) %>
+                  <%= descriptionLow %> ... 
+                <% } else { %>
+                  <%= book.descripcion %> </p>
+                <% } %>
+               </p>
             <a class="nov-autor" href=""><%= book.autor %> </a>
             <span class="nov-price">$ <%= book.precio %> </span>
           </div>
@@ -113,7 +141,14 @@
               <img class="books__img book-cover" src="images/libros/<%= book.imagen%>" alt="">       
             </figure>
             <div class="nov-description">
-              <p class="nov-text"><%= book.descripcion %> </p>
+              <p class="nov-text">
+                 <% if (book.descripcion.length > 250) { %>
+                  <% let descriptionLow = book.descripcion.slice(0 , 250) %>
+                  <%= descriptionLow %> ... 
+                <% } else { %>
+                  <%= book.descripcion %> </p>
+                <% } %>
+               </p>
               <a class="nov-autor" href=""><%= book.autor %> </a>
               <span class="nov-price">$ <%= book.precio %> </span>
             </div>
@@ -122,7 +157,14 @@
       <% } else { %>
         <div class="nov-product">
           <div class="nov-description">
-            <p class="nov-text"><%= book.descripcion %> </p>
+            <p class="nov-text">
+               <% if (book.descripcion.length > 250) { %>
+                  <% let descriptionLow = book.descripcion.slice(0 , 250) %>
+                  <%= descriptionLow %> ... 
+                <% } else { %>
+                  <%= book.descripcion %> </p>
+                <% } %>
+               </p>
             <a class="nov-autor" href=""><%= book.autor %> </a>
             <span class="nov-price">$ <%= book.precio %> </span>
           </div>
