se modifica base de datos para que coincida con el detalle del producto

--- a/spellBook/src/views/partials/header.ejs
+++ b/spellBook/src/views/partials/header.ejs
@@ -28,7 +28,7 @@
             <a href="#" class="menu__link">Libros</a>
         </li>
         <li class="menu__items">
-          <a href="#" class="menu__link">Recomendados</a>
+          <a href="/novelties" class="menu__link">Recomendados</a>
         </li>
         <li class="menu__items">
           <a href="/novelties" class="menu__link">Novedades</a>
@@ -92,7 +92,7 @@
             <a href="/novelties" class="menu__link__desk">Recomendados</a>
           </li>
           <li class="menu__items__desk">
-            <a href="#" class="menu__link__desk__desk">Novedades</a>
+            <a href="/novelties" class="menu__link__desk__desk">Novedades</a>
           </li>
           <li class="menu__items__desk">
             <a href="/aboutUs" class="menu__link__desk">Nosotros</a>
