--- a/spellBook/src/views/products/productDetail.ejs
+++ b/spellBook/src/views/products/productDetail.ejs
@@ -30,7 +30,7 @@
               Año de edicion:<span class="description--gray">2017</span>
             </p>
             <p class="descriptions__text">
-              Idioma:<span class="description--gray">Castellaño</span>
+              Idioma:<span class="description--gray">Castellano</span>
             </p>
             <p class="descriptions__text">
               Cantidad de páginas:<span class="description--gray">256</span>
