--- a/spellBook/src/views/products/productDetail.ejs
+++ b/spellBook/src/views/products/productDetail.ejs
@@ -9,7 +9,7 @@
     <main class="main">
       <section class="product">
         <article class="item">
-          <h2 class="item__title">Animales Fantasticos</h2>
+          <h2 class="item__title"><%=idBook.titulo%></h2>
           <figure class="item__img">
             <img
               src="/images/libros/<%=idBook.imagen%>"
