--- a/spellBook/src/views/aboutUs.ejs
+++ b/spellBook/src/views/aboutUs.ejs
@@ -35,7 +35,7 @@
 <!-- CONTACT US -->
 
   <form class="contactUs-form">
-    <h2>¡Hablemos!</h2>
+    <h2 class="aboutUs-h2">¡Hablemos!</h2>
     <p class="p-form" type="Nombre:"><input placeholder="Ingresá tu nombre"></input></p>
     <p class="p-form" type="E-mail:"><input placeholder="Dejanos tu e-mail"></input></p>
     <p class="p-form" type="Mensaje:"><input placeholder="¿Qué te gustaría decirnos?"></input></p>
