--- a/spellBook/public/stylesheets/home.css
+++ b/spellBook/public/stylesheets/home.css
@@ -333,7 +333,7 @@ h5 {
     display: flex;
     flex-direction: row;
     align-items: center;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     justify-content: space-around;
     padding-bottom: 6rem;
 
