--- a/spellBook/src/views/products/books.ejs
+++ b/spellBook/src/views/products/books.ejs
@@ -7,6 +7,35 @@
 <!-- HEADER -->
 <%- include('../partials/header') %> 
 
+<div class="nov-title">
+  <h1>Nuestros Libros</h1>
+  <hr class="bg-blue">
+</div>
+
+
+  
+  <% products.forEach(book => { %>
+    <section class="month-selection">
+   <article class="book">
+     <div class="book-content">
+       <a href="/product/<%= book.id %> ">
+         <img class="book-cover" src="/images/Libros/<%= book.imagen %>" alt="">
+       </a>
+       <h3><%= book.nombre %> </h3>
+       <h5><%= book.autor %> </h5>
+     <div class="book-price">
+       <i class="fas fa-dollar-sign"></i>
+       <p><%= book.precio %> </p>
+     </div>
+       <!-- Botón de comprar -->
+     <div>
+       <input class="button" type="button" value="Comprar">
+     </div>
+   </div>
+   </article>
+  </section>
+  <% }) %>
+
 
 
 
@@ -17,6 +46,6 @@
 <%- include('../partials/footer') %>
 
 <!-- LINK DEL JS DEL HEADER -->
-<script src="js/header.js"></script>
+<script src="/js/header.js"></script>
 
 </body>
